k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emt-backend
  namespace: emt-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emt-backend
  template:
    metadata:
      labels:
        app: emt-backend
    spec:
      containers:
        - name: backend
          image: anunyan1/emt-backend:latest
          ports:
            - containerPort: 8181
