k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emt-backend
  namespace: emt-lab
spec:
  selector:
    app: emt-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8181
