k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emt-frontend
  namespace: emt-lab
spec:
  selector:
    app: emt-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
