k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emt-ingress
  namespace: emt-lab
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: emt.anunyan.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emt-frontend
                port:
                  number: 80
